Implement formatting of dates

--- a/days.template.html
+++ b/days.template.html
@@ -1,10 +1,8 @@
 {{range .Days}}
     <section>
-        <h2 class="text-xl">
-            {{.DayOfTheWeek}}
-        </h2>
-        <div>
+        <h2 class="text-xl text-center">
+            {{.DayOfTheWeek}}<br>
             {{.Date}}
-        </div>
+        </h2>
     </section>
 {{end}}
