--- a/days.template.html
+++ b/days.template.html
@@ -1,8 +1,16 @@
 {{range .Days}}
-    <section>
-        <h2 class="text-xl text-center">
+    <section class="border border-gray-700 rounded-xl text-center">
+        <h2 class="text-lg p-4">
             {{.DayOfTheWeek}}<br>
-            {{.Date}}
+            <span class="text-gray-700 text-base">{{.Date}}</span>
         </h2>
+        <div class="p-4 bg-green-200 rounded-b-xl">
+            <div class="text-gray-700">
+                Dinner
+            </div>
+            <div class="text-xl font-bold ">
+                {{.Dish}}
+            </div>
+        </div>
     </section>
 {{end}}
