--- a/days.template.html
+++ b/days.template.html
@@ -1,5 +1,5 @@
 {{range .Days}}
-    <section class="border border-gray-700 rounded-xl text-center">
+    <section class="border border-gray-700 rounded-xl text-center divide-y divide-gray-700">
         <h2 class="text-lg p-4">
             {{.DayOfTheWeek}}<br>
             <span class="text-gray-700 text-base">{{.Date}}</span>
@@ -14,3 +14,11 @@
         </div>
     </section>
 {{end}}
+<button class="border border-gray-700 rounded-xl flex flex-col items-center justify-center" hx-get="addDay">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-16 h-16">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+    </svg>
+    <span class="text-2xl font-semibold">
+        Add
+    </span>
+</button>
