--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- TODO: replace with local version of tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- TODO: replace with local version of alpinejs -->
+    <script src="//unpkg.com/alpinejs" defer></script>
     <title>HTML 5 Boilerplate</title>
 </head>
 <body>
