--- a/days.template.html
+++ b/days.template.html
@@ -6,14 +6,22 @@
                     {{.DayOfTheWeek}}<br>
                     <span class="text-gray-700 text-base">{{.Date}}</span>
                 </h2>
-                <div class="p-4 bg-green-200 rounded-b-xl">
-                    <div class="text-gray-700">
-                        Dinner
+                {{if .Dish}}
+                    <div class="p-4 bg-green-200 rounded-b-xl">
+                        <div class="text-gray-700">
+                            Dinner
+                        </div>
+                        <div class="text-xl font-bold ">
+                            {{.Dish}}
+                        </div>
                     </div>
-                    <div class="text-xl font-bold ">
-                        {{.Dish}}
+                {{else}}
+                    <div class="p-4 rounded-b-xl">
+                        <div class="text-gray-700">
+                            Nothing planned
+                        </div>
                     </div>
-                </div>
+                {{end}}
             </section>
         {{end}}
         <button class="w-full h-full border border-gray-700 rounded-xl flex flex-col items-center justify-center" @click="$refs.addDialog.showModal()">
@@ -35,8 +43,8 @@
                 <label class="font-light text-gray-700" for="dinner">Dinner:</label><br>
                 <input class="w-full px-4 py-2 border border-gray-700 rounded-lg" id="dinner" type="text" name="dinner" >
             </p>
-            <div class="space-x-2 self-end">
-                <button value="cancel" formmethod="dialog" class="px-4 py-2 border border-gray-700 rounded-lg">
+            <div class="self-end">
+                <button value="cancel" formmethod="dialog" class="mx-4 my-2 text-red-700 underline">
                     Close
                 </button>
                 <button class="px-4 py-2 border border-gray-700 rounded-lg">
