Improve mobile layout

--- a/days.template.html
+++ b/days.template.html
@@ -1,5 +1,5 @@
 <div x-data="{ open: false }">
-    <div class="grid grid-cols-4 gap-4">
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
         {{range .Days}}
             <section class="border border-gray-700 rounded-xl text-center divide-y divide-gray-700">
                 <h2 class="text-lg p-4">
