--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- TODO: replace with local version of htmx -->
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
-    <main class="w-[960px] mx-auto">
+    <main class="max-w-[960px] mx-4 md:mx-auto">
         <h1 class="text-3xl py-8 text-center">
             Meal Planner
         </h1>
