--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- TODO: replace with local version of alpinejs -->
     <script src="//unpkg.com/alpinejs" defer></script>
-    <title>HTML 5 Boilerplate</title>
+    <title>Meal Planner</title>
 </head>
 <body>
     <!-- TODO: replace with local version of htmx -->
