Adjust styling of the dialog
Replace 'cancel' button with 'x' button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- TODO: replace with local version of htmx -->
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <main class="max-w-[960px] mx-4 md:mx-auto">
-        <h1 class="text-3xl py-8 text-center">
+        <h1 class="text-3xl font-semibold py-8 text-center">
             Meal Planner
         </h1>
         <div id="day-plan" hx-get="/days" hx-swap="outerHtml" hx-trigger="load">
